--- a/index.html
+++ b/index.html
@@ -4508,10 +4508,10 @@
                             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block w-100" src="/assets/images/Fam.jpeg" alt="First slide">
+                                        <img class="d-block w-100" src="/assets/images/am.jpeg" alt="First slide">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100" src="/assets/images/familyman.JPG" alt="Second slide">
+                                        <img class="d-block w-100" src="/assets/images/familyman.jpg" alt="Second slide">
                                     </div>
                                     <div class="carousel-item">
                                         <img class="d-block w-100" src="/assets/images/matt.jpg" alt="Third slide">
@@ -4638,27 +4638,27 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-3">
-                                <img src="/assets/images/Adobe_Illustrator.png" alt="Adobe Illustrator" class="img-fluid img-thumbnail">
+                                <img src="/assets/images/ai.png" alt="Adobe Illustrator" class="img-fluid img-thumbnail">
                             </div>
                             <div class="col-md-3">
                                 <img src="/assets/images/bootstrap.png" alt="Bootstrap" class="img-fluid img-thumbnail">
                             </div>
                             <div class="col-md-3">
-                                <img src="/assets/images/Github.svg" alt="Github" class="img-fluid img-thumbnail">
+                                <img src="/assets/images/github.svg" alt="Github" class="img-fluid img-thumbnail">
                             </div>
                             <div class="col-md-3">
-                                <img src="/assets/images/ReactJS.png" alt="ReactJS" class="img-fluid img-thumbnail">
+                                <img src="/assets/images/reactjs.png" alt="ReactJS" class="img-fluid img-thumbnail">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-3">
-                                <img src="/assets/images/HTML5.png" alt="HTML5" class="img-fluid img-thumbnail">
+                                <img src="/assets/images/html5.png" alt="HTML5" class="img-fluid img-thumbnail">
                             </div>
                             <div class="col-md-3">
-                                <img src="/assets/images/CSS3.png" alt="CSS3" class="img-fluid img-thumbnail">
+                                <img src="/assets/images/css3.png" alt="CSS3" class="img-fluid img-thumbnail">
                             </div>
                             <div class="col-md-3">
-                                <img src="/assets/images/JavaScript.png" alt="JavaScript" class="img-fluid img-thumbnail">
+                                <img src="/assets/images/javascript.png" alt="JavaScript" class="img-fluid img-thumbnail">
                             </div>
                             <div class="col-md-3">
                                 <img src="/assets/images/jquery.png" alt="jQuery" class="img-fluid img-thumbnail">
@@ -4675,7 +4675,7 @@
                                 <img src="/assets/images/express.png" alt="Express" class="img-fluid img-thumbnail">
                             </div>
                             <div class="col-md-3">
-                                <img src="/assets/images/MySQL.png" alt="MySQL" class="img-fluid img-thumbnail">
+                                <img src="/assets/images/mysql.png" alt="MySQL" class="img-fluid img-thumbnail">
                             </div>
                         </div>
                     </div>
