--- a/index.html
+++ b/index.html
@@ -4585,7 +4585,7 @@
                     <div class="text-dark m-2">
                         <div class="row" id="mara">
                             <div class="col-md-6 ml-auto">
-                                <img class="card-img" src="/assets/images/marathon.jpg.png" alt="Card image">             
+                                <img class="card-img" src="/assets/images/marathon.jpg" alt="Card image">             
                             </div>
                             <div class="col-md-6 mt-2 ml-auto" id="maraoverlay">             
                                 <h4 class="title text-right">Marathons</h4>
