--- a/index.html
+++ b/index.html
@@ -4702,7 +4702,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="card border-danger bg-dark h-100" id="proCard">
-                                <img class="card-img-top h-25" src="/assets/images/propic1.JPG" alt="Card image cap">
+                                <img class="card-img-top h-25" src="/assets/images/propic1.jpg" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">TriviaGame</h5>
                                     <p class="card-text">A trivia game that would determine whether or not you would become a member of the Justice
@@ -4714,7 +4714,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="card border-danger bg-dark h-100" id="proCard">
-                                <img class="card-img-top h-25" src="/assets/images/propic3.JPG" alt="Card image cap">
+                                <img class="card-img-top h-25" src="/assets/images/propic3.jpg" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">Food_Collectors</h5>
                                     <p class="card-text">Use technology to reduce problems in society and improve people’s lives. Create an app
@@ -4727,7 +4727,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="card border-danger bg-dark h-100" id="proCard">
-                                <img class="card-img-top h-25" src="/assets/images/propic2.JPG" alt="Card image cap">
+                                <img class="card-img-top h-25" src="/assets/images/propic2.jpg" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">TrailerLife</h5>
                                     <p class="card-text">The user can enter the title of the movie and the app will call the Imdb api for info
